--- a/src/Security/SecurityBundle/Resources/views/Security/login.html.twig
+++ b/src/Security/SecurityBundle/Resources/views/Security/login.html.twig
@@ -1,59 +1,157 @@
-{% extends '::login.html.twig' %}
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<title>IPDC::Registro de Contratistas</title>
 
+		<meta name="description" content="Registro de contratistas" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    {% block body %}
+		<!--basic styles-->
 
+		<link href="{{asset('css/bootstrap.min.css')}}" rel="stylesheet" />
+		<link href="{{asset('css/bootstrap-responsive.min.css')}}" rel="stylesheet" />
+		<link rel="stylesheet" href="{{asset('css/font-awesome.min.css')}}" />
 
+		<!--[if IE 7]>
+		  <link rel="stylesheet" href="{{asset('css/font-awesome-ie7.min.css')}}" />
+		<![endif]-->
 
-<div class="notice">
-            {% if error %}
-        <a href="" class="close">close</a>
-        <p class="warn">{{ error.message }}</p>
-                {% endif %} 
-    </div>
+		<!--page specific plugin styles-->
 
+		<!--fonts-->
 
+		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" />
 
-    <!-- Primary Page Layout -->
+		<!--ace styles-->
 
-    <div class="container">
+		<link rel="stylesheet" href="{{asset('css/ace.min.css')}}" />
+		<link rel="stylesheet" href="{{asset('css/ace-responsive.min.css')}}" />
+		<link rel="stylesheet" href="{{asset('css/ace-skins.min.css')}}" />
 
-        <div class="form-bg">
+		<!--[if lte IE 8]>
+		  <link rel="stylesheet" href="{{asset('css/ace-ie.min.css')}}" />
+		<![endif]-->
+	<link rel="icon" type="image/png" href="{{asset('img/favicon.png')}}" >
+		<!--inline styles related to this page-->
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
 
-            <form action="{{ path('login_check') }}" method="post">
-                <h2>Login</h2>
+	<body class="login-layout">
+		<div class="main-container container-fluid">
+			<div class="main-content">
+				<div class="row-fluid">
+					<div class="span12">
+						<div class="login-container">
+							<div class="row-fluid">
+								<div class="center">
+								</div>
+							</div>
 
-                <p><input type="text" id="username" name="_username" value="{{ last_username }}" placeholder="Username"/></p>
-                <p><input type="password" id="password" name="_password" placeholder="Password"/></p>
+							<div class="space-6"></div>
 
-                <label for="remember">
-                    <!-- 
-                    <input type="checkbox" id="remember" value="remember" />
-                    <span>Remember me on this computer</span>
-                    -->
-                </label>
+							<div class="row-fluid">
+								<div class="position-relative">
+									
+									<div id="signup-box" class="signup-box widget-box no-border visible">
+										<div class="widget-body">
+											<div class="widget-main">
+												<center><img src="{{asset('img/logo-secretaria.png')}}" width="100px" /></center>
+												<h4 class="header green lighter bigger">
+													<i class="icon-group blue"></i> Ingrese su informaci&oacute;n:
+												</h4>
+												<div class="space-6"></div>
+												<p>  </p>
+												<form action="{{ path("login_check") }}" method="POST" />
+													<fieldset>
+														{% if error %}
+														 	<div class="alert alert-error">{{ error }}</div>
+														{% endif %}
+											            <input type="hidden" name="_csrf_token" value="{ csrf_token }}" />
+														<label>
+															<span class="block input-icon input-icon-right">
+																<input type="text" class="span12" placeholder="{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}" id="username" name='_username' />
+																<i class="icon-user"></i>
+															</span>
+														</label>
 
-                <button type="submit">login</button>
+														
 
-                <!-- <p class="forgot">Forgot your password? <a href="">Click here to reset it.</a></p> -->
-            </form>
+														<label>
+															<span class="block input-icon input-icon-right">
+																<input type="password" class="span12" id="password" name="_password" placeholder="{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}"  />
+																<i class="icon-lock"></i>
+															</span>
+														</label>
+														<div class="clearfix">
+															<button  type="submit" class="width-65 pull-right btn btn-small btn-success">
+																Entrar
+																<i class="icon-arrow-right icon-on-right"></i>
+															</button>
+														</div>
+													</fieldset>
+												</form>
+											</div>
+										</div><!--/widget-body-->
+									</div><!--/signup-box-->
+								</div><!--/position-relative-->
+							</div>
+						</div>
+					</div><!--/.span-->
+				</div><!--/.row-fluid-->
+			</div>
+		</div><!--/.main-container-->
 
+		<!--basic scripts-->
 
+		<!--[if !IE]>-->
 
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
+		<!--<![endif]-->
 
+		<!--[if IE]>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<![endif]-->
 
-        </div>
+		<!--[if !IE]>-->
 
+		<script type="text/javascript">
+			window.jQuery || document.write("<script src='{{asset('js/jquery-2.0.3.min.js')}}'>"+"<"+"/script>");
+		</script>
 
+		<!--<![endif]-->
 
+		<!--[if IE]>
+<script type="text/javascript">
+ window.jQuery || document.write("<script src='{{asset('js/jquery-1.10.2.min.js')}}'>"+"<"+"/script>");
+</script>
+<![endif]-->
 
+		<script type="text/javascript">
+			if("ontouchend" in document) document.write("<script src='{{asset('js/jquery.mobile.custom.min.js')}}'>"+"<"+"/script>");
+		</script>
+		<script src="{{asset('js/bootstrap.min.js')}}"></script>
 
-    </div><!-- container -->
+		<!--page specific plugin scripts-->
 
-    <!-- JS  -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
-    <script>window.jQuery || document.write("<script src='js/jquery-1.5.1.min.js'>\x3C/script>")</script>
-    <script src="js/app.js"></script>
+		<!--ace scripts-->
 
-{% endblock %}
+		<script src="{{asset('js/ace-elements.min.js')}}"></script>
+		<script src="{{asset('js/ace.min.js')}}"></script>
+
+		<!--inline scripts related to this page-->
+
+		<script type="text/javascript">
+			function show_box(id) {
+			 $('.widget-box.visible').removeClass('visible');
+			 $('#'+id).addClass('visible');
+			 
+			}
+			$(document).ready(function(){
+				$('.numbersOnly').keyup(function () { 
+				    this.value = this.value.replace(/[^0-9\.]/g,'');
+				});
+			});
+		</script>
+	</body>
+</html>
