--- a/src/IDPC/SolicitudBundle/Resources/views/EstudioPrevio/new.html.twig
+++ b/src/IDPC/SolicitudBundle/Resources/views/EstudioPrevio/new.html.twig
@@ -1,7 +1,7 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>EstudiosPrevios creation</h1>
+    <h1>EstudioPrevio creation</h1>
 
     {{ form(form) }}
 
