--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,360 +1,23 @@
 <!DOCTYPE html>
-<html lang="es">
-	<head>
-		<meta charset="utf-8" />
-		<title>{%block title%}INSTITUTO DISTRITAL DE PATRIMONIO CULTURAL{%endblock%}</title>
+<html>
+    <head>
+        <meta charset="UTF-8" />
+        <title>{% block title %}Welcome!{% endblock %}</title>
+        {% block stylesheets %}{% endblock %}
+        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+    </head>
+    <body>
+        
 
-		<meta name="description" content="Portal de Contratacion IDPC" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+            <ul class="toggle">
+                <li class="icn_settings"><a href="{{ path('contrato') }}">Contrato</a></li>
+                <li class="icn_settings"><a href="{{ path('cumplimiento') }}">Cumplimiento</a></li>
+                <li class="icn_settings"><a href="{{ path('informe') }}">Informe de Actividades</a></li>
+                <li class="icn_settings"><a href="{{ path('pago') }}">Pagos</a></li>
+            </ul>
 
-		<!--basic styles-->
-
-		<link href="{{asset('css/bootstrap.min.css')}}" rel="stylesheet" />
-		<link href="{{asset('css/bootstrap-responsive.min.css')}}" rel="stylesheet" />
-		<link rel="stylesheet" href="{{asset('css/font-awesome.min.css')}}" />
-		<!--[if IE 7]>
-		  <link rel="stylesheet" href="{{asset('css/font-awesome-ie7.min.css')}}" />
-		<![endif]-->
-		<!--page specific plugin styles-->
-		<!--fonts-->
-
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" />
-
-		<!--ace styles-->
-
-		<link rel="stylesheet" href="{{asset('css/ace.min.css')}}" />
-		<link rel="stylesheet" href="{{asset('css/ace-responsive.min.css')}}" />
-		<link rel="stylesheet" href="{{asset('css/ace-skins.min.css')}}" />
-		<link rel="stylesheet" href="{{asset('css/custom-theme/jquery-ui-1.10.0.custom.css')}}" />
-		<link rel="stylesheet" href="{{asset('css/ui.jqgrid.css')}}" />
-		<link rel="stylesheet" href="{{asset('css/jquery.gritter.css')}}" />
-		<link rel="stylesheet" href="{{asset('css/select2.css')}}" />
-		<!--[if lte IE 8]>
-		  <link rel="stylesheet" href="{{asset('css/ace-ie.min.css')}}" />
-		  <link rel="stylesheet" href="{{asset('css/css/custom-theme/jquery-ui-1.10.0.custom.ie
-		  .css')}}" />
-		<![endif]-->
-		<style>
-		#logo1 {
-		    background-color: #000000;
-		    text-align: center;
-		    width: 100%;
-		    padding:0px;
-		    margin-top:0;
-		    margin-bottom:0;
-		    line-height:14px;
-		}
-		table th{
-			text-align:left;
-		}
-		</style>
-		{%block stylesheets%}{%endblock%}
-		<!--inline styles related to this page-->
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
-	<link rel="icon" type="image/png" href="{{asset('img/favicon.png')}}" >
-
-	<body>
-		<h1 id="logo1"><a href="http://www.bogota.gov.co" title="" target="_blank"><img title="" src="{{asset('img/bogota.png')}}" alt=""></a></h1>
-		<div class="navbar">
-			<div class="navbar-inner">
-				<div class="container-fluid">
-					<a href="#" class="brand">
-						<p style="font-size:14px; font-family:Arial; line-height: 3mm; margin-top:12px;">
-						INSTITUTO DISTRITAL DE PATRIMONIO CULTURAL<br />
-						<small>Sector Cultura, Recreaci&oacute;n y Deporte</small>
-						</p>
-					</a><!--/.brand-->
-					<ul class="nav ace-nav pull-right ">
-					<li class="light-blue">
-						<a href="#">
-							<img src="{{asset('img/logos_alcaldia_barra.png')}}" />
-						</a>
-					</li>
-					{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-					<li class="green open" id="li-mensajes">
-						{ render(controller('IDPCContratacionBundle:Mensaje:index')) }}
-					</li>
-					<li class="light-blue">
-							<a data-toggle="dropdown" href="#" class="dropdown-toggle">
-								<img class="nav-user-photo" src="{{asset('avatars/default_avatar.png')}}" alt="{app.user.nombre}}" />
-								<span class="user-info"> 
-									<small>Usuario:</small>
-									{{app.user.username ? app.user.username : app.user.username}}
-								</span>
-
-								<i class="icon-caret-down"></i>
-							</a>
-
-							<ul class="user-menu pull-right dropdown-menu dropdown-yellow dropdown-caret dropdown-closer">
-								<li>
-									<a href="{ path('fos_user_change_password') }}">
-										<i class="icon-user"></i>
-										Cambiar contrase&ntilde;a
-									</a>
-								</li>
-								<li>
-									<a href="{ path('admin_security_userdet_show') }}">
-										<i class="icon-cog"></i>
-										Perfil 
-									</a>
-								</li>
-								<li class="divider"></li>
-
-								<li>
-									<a href="{ path('logout') }}">
-										<i class="icon-off"></i>
-										Salir
-									</a>
-								</li>
-							</ul>
-						</li>
-						{%endif%}
-					</ul><!--/.ace-nav-->
-				</div><!--/.container-fluid-->
-			</div><!--/.navbar-inner-->
-		</div>
-
-		<div class="main-container container-fluid">
-			<a class="menu-toggler" id="menu-toggler" href="#">
-				<span class="menu-text"></span>
-			</a>
-
-			<div class="sidebar" id="sidebar">
-				<ul class="nav nav-list">
-					{% if is_granted("ROLE_ADMIN") %}	
-					<li>
-						
-						<a href="#" class="dropdown-toggle">
-							<i class="icon-desktop"></i>
-							<span class="menu-text"> Configuraci&oacute;n </span>
-
-							<b class="arrow icon-angle-down"></b>
-						</a>
-						<ul class="submenu">
-							<li>
-								<a href="{path('area')}}">
-									<i class="icon-double-angle-right"></i>
-									Areas
-								</a>
-							</li>
-
-							<li>
-								<a href="{path('modulo')}}">
-									<i class="icon-double-angle-right"></i>
-									M&oacute;dulos
-								</a>
-							</li>
-
-							<li>
-								<a href="{path('perfil')}}">
-									<i class="icon-double-angle-right"></i>
-									Perfiles
-								</a>
-							</li>
-							<li>
-								<a href="{path('tipodocumento')}}">
-									<i class="icon-double-angle-right"></i>
-									Documentos
-								</a>
-							</li>
-							<li>
-								<a href="{path('moduloperfil')}}" class="dropdown-toggle">
-									<i class="icon-double-angle-right"></i>
-									Seguridad
-								</a>
-						    </li>
-						    <li>
-								<a href="{path('cdp')}}" class="dropdown-toggle">
-									<i class="icon-double-angle-right"></i>
-									CDP
-								</a>
-						    </li>
-						</ul>
-					</li>
-					<li>
-						<a href="#" class="dropdown-toggle">
-							<i class="icon-edit"></i>
-							<span class="menu-text"> Contrataci&oacute;n </span>
-
-							<b class="arrow icon-angle-down"></b>
-						</a>
-
-						<ul class="submenu">
-							<li>
-								<a href="{{path('contrato')}}">
-									<i class="icon-double-angle-right"></i>
-									Contratos
-								</a>
-							</li>
-
-							<li>
-								<a href="{path('clasecontrato')}}">
-									<i class="icon-double-angle-right"></i>
-									Clases de Contrato
-								</a>
-							</li>
-							<li>
-								<a href="{path('contratista')}}">
-									<i class="icon-double-angle-right"></i>
-									Contratista
-								</a>
-							</li>
-							<li>
-								<a href="{path('plantilla')}}">
-									<i class="icon-double-angle-right"></i>
-									Plantillas
-								</a>
-							</li>
-
-						</ul>
-					</li>
-					{%endif%}
-					{%if is_granted("ROLE_AREA") or is_granted("ROLE_JURIDICA") or is_granted("ROLE_RRHH") %}
-						<li>
-						<a href="#" class="dropdown-toggle">
-							<i class="icon-edit"></i>
-							<span class="menu-text"> Contrataci&oacute;n </span>
-
-							<b class="arrow icon-angle-down"></b>
-						</a>
-
-						<ul class="submenu">
-							<li>
-								<a href="{{path('contrato')}}">
-									<i class="icon-double-angle-right"></i>
-									Contratos
-								</a>
-							</li>
-							<li>
-								<a href="{path('contratista')}}">
-									<i class="icon-double-angle-right"></i>
-									Contratista
-								</a>
-							</li>
-						</ul>
-					</li>
-					{%endif%}
-					{% if is_granted("ROLE_CONTRATISTA") and not is_granted("ROLE_AREA")%}
-						<li>
-						<a href="#" class="dropdown-toggle">
-							<i class="icon-edit"></i>
-							<span class="menu-text"> Contrataci&oacute;n </span>
-
-							<b class="arrow icon-angle-down"></b>
-						</a>
-
-						<ul class="submenu">
-							<li>
-								<a href="{{path('contrato')}}">
-									<i class="icon-double-angle-right"></i>
-									Contratos
-								</a>
-							</li>
-							<li>
-								<a href="{path('contratista')}}">
-									<i class="icon-double-angle-right"></i>
-									Contratista
-								</a>
-							</li>
-
-						</ul>
-					</li>
-					{%endif%}
-				</ul><!--/.nav-list-->
-
-				<div class="sidebar-collapse" id="sidebar-collapse">
-					<i class="icon-double-angle-left"></i>
-				</div>
-			</div>
-
-			<div class="main-content">
-				<div class="breadcrumbs" id="breadcrumbs">
-					<ul class="breadcrumb">
-						{%block breadcumbs%}{%endblock%}
-					</ul><!--.breadcrumb-->					
-				</div>
-
-				<div class="page-content">
-					<div class="row-fluid">
-						<div class="span12">
-							<!--PAGE CONTENT BEGINS-->
-							{%block body%}{%endblock%}
-							<!--PAGE CONTENT ENDS-->
-						</div><!--/.span-->
-					</div><!--/.row-fluid-->
-				</div><!--/.page-content-->
-			</div><!--/.main-content-->
-		</div><!--/.main-container-->
-
-		<a href="#" id="btn-scroll-up" class="btn-scroll-up btn btn-small btn-inverse">
-			<i class="icon-double-angle-up icon-only bigger-110"></i>
-		</a>
-
-		<!--basic scripts-->
-
-		<!--[if !IE]>-->
-
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-
-		<!--<![endif]-->
-
-		<!--[if IE]>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<![endif]-->
-
-		<!--[if !IE]>-->
-
-		<script type="text/javascript">
-			window.jQuery || document.write("<script src='{{asset('js/jquery-2.0.3.min.js')}}'>"+"<"+"/script>");
-		</script>
-
-		<!--<![endif]-->
-
-		<!--[if IE]>
-<script type="text/javascript">
- window.jQuery || document.write("<script src='{{asset('js/jquery-1.10.2.min.js')}}'>"+"<"+"/script>");
-</script>
-<![endif]-->
-
-		<script type="text/javascript">
-			if("ontouchend" in document) document.write("<script src='{{asset('js/jquery.mobile.custom.min.js')}}'>"+"<"+"/script>");
-		</script>
-		<script src="{{asset('js/bootstrap.min.js')}}"></script>
-		
-		<!--page specific plugin scripts-->
-
-		<!--ace scripts-->
-
-		<script src="{{asset('js/ace-elements.min.js')}}"></script>
-		<script src="{{asset('js/ace.min.js')}}"></script>
-		<script src="{{asset('js/tinymce.min.js')}}"></script>
-		<script src="{{asset('js/jquery.tinymce.min.js')}}"></script>
-		<script src="{{asset('js/jquery.jqGrid.min.js')}}"></script>
-		<script src="{{asset('js/grid.locale-es.js')}}"></script>
-		<script src="{{asset('js/jquery-ui-1.9.2.custom.min.js')}}"></script>
-		<script src="{{asset('js/spin.min.js')}}"></script>
-		<script src="{{asset('js/jquery.autosize.min.js')}}"></script>
-		<script src="{{asset('js/jquery.gritter.min.js')}}"></script>
-		<script src="{{asset('js/select2.min.js')}}"></script>
-		<script src="{{asset('js/nicEdit-latest.js')}}"></script>
-		<script>
-			$(document).ready(function(){
-				uri="{{app.request.requesturi}}";
-				$.each($(".nav-list ul li a, .submenu li a "),function(idx,val){
-					hr=$(this).attr('href');
-					if( uri.indexOf(hr)==0){
-						$(this).parent().addClass('active');
-					}
-				});
-				
-				$(".submenu li.active").parent("li").addClass("open");
-				$(".submenu li.active").parent().slideToggle('normal');
-				$('.numbersOnly').keyup(function () { 
-				    this.value = this.value.replace(/[^0-9\.]/g,'');
-				});
-			});
-		</script>
-		{%block javascripts%}{%endblock%}
-		<!--inline scripts related to this page-->
-	</body>
-</html>
+        
+        {% block body %}{% endblock %}
+        {% block javascripts %}{% endblock %}
+        </body>
+    </html>
