--- a/src/IDPC/SolicitudBundle/Resources/views/Solicitud/index.html.twig
+++ b/src/IDPC/SolicitudBundle/Resources/views/Solicitud/index.html.twig
@@ -10,7 +10,7 @@
                 <th>Fechacierre</th>
                 <th>Estadosolicitud</th>
                 <th>Estadoproceso</th>
-                <th>Observaciones</th>
+                <th>Area</th>
                 <th>Created_at</th>
                 <th>Update_at</th>
                 <th>Actions</th>
@@ -20,12 +20,12 @@
         {% for entity in entities %}
             <tr>
                 <td><a href="{{ path('solicitud_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{% if entity.fechaCierre %}{{ entity.fechaCierre|date('Y-m-d H:i:s') }}{% endif %}</td>
+                <td>{% if entity.fechaCierre %}{{ entity.fechaCierre|date('Y-m-d') }}{% endif %}</td>
                 <td>{{ entity.estadoSolicitud }}</td>
                 <td>{{ entity.estadoProceso }}</td>
-                <td>{{ entity.observaciones }}</td>
-                <td>{% if entity.createdat %}{{ entity.createdat|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{% if entity.updateat %}{{ entity.updateat|date('Y-m-d H:i:s') }}{% endif %}</td>
+                <td>{{ entity.area.sigla }}</td>
+                <td>{% if entity.createdat %}{{ entity.createdat|date('Y-m-d') }}{% endif %}</td>
+                <td>{% if entity.updateat %}{{ entity.updateat|date('Y-m-d') }}{% endif %}</td>
                 <td>
                 <ul>
                     <li>
