--- a/src/IDPC/BaseBundle/Resources/views/ProyectoInversion/show.html.twig
+++ b/src/IDPC/BaseBundle/Resources/views/ProyectoInversion/show.html.twig
@@ -15,7 +15,7 @@
             </tr>
             <tr>
                 <th>Descipcion</th>
-                <td>{{ entity.descipcion }}</td>
+                <td>{{ entity.descripcion }}</td>
             </tr>
             <tr>
                 <th>Vigencia</th>
