--- a/src/IDPC/BaseBundle/Resources/views/ProyectoInversion/index.html.twig
+++ b/src/IDPC/BaseBundle/Resources/views/ProyectoInversion/index.html.twig
@@ -18,7 +18,7 @@
             <tr>
                 <td><a href="{{ path('proyectoinversion_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.codigo }}</td>
-                <td>{{ entity.descipcion }}</td>
+                <td>{{ entity.descripcion }}</td>
                 <td>{{ entity.vigencia }}</td>
                 <td>
                 <ul>
