--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -206,7 +206,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="{path('contratista')}}">
+								<a href="{{path('admin_security_userdet')}}">
 									<i class="icon-double-angle-right"></i>
 									Contratista
 								</a>
