--- a/src/Security/SecurityBundle/Resources/views/UserDet/index.html.twig
+++ b/src/Security/SecurityBundle/Resources/views/UserDet/index.html.twig
@@ -41,7 +41,7 @@
 
         <ul>
         <li>
-            <a href="{{ path('admin_security_userdet_new') }}">
+            <a href="{{ path('admin_security_user_new') }}">
                 Create a new entry
             </a>
         </li>
