--- a/src/IDPC/ContractualBundle/Resources/views/Contrato/edit.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Contrato/edit.html.twig
@@ -1,16 +1,17 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
+<div class="page-header">
+    	<h1>Contratos</h1>
+		{# {% if is_granted("ROLE_ADMIN") %} #}<a href="{{ path('contrato') }}" class="btn btn-primary btn-mini"><i class="icon-plus icon-white"></i>Regresar</a>{# {%endif%} #}
+		<br clear="all" />
+	</div>
     <h1>Contrato edit</h1>
 
     {{ form(edit_form) }}
 
         <ul class="record_actions">
-    <li>
-        <a href="{{ path('contrato') }}">
-            Back to the list
-        </a>
-    </li>
+    
     <li>{{ form(delete_form) }}</li>
 </ul>
 {% endblock %}
