--- a/src/Security/SecurityBundle/Resources/views/User/index.html.twig
+++ b/src/Security/SecurityBundle/Resources/views/User/index.html.twig
@@ -1,7 +1,12 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>User list</h1>
+
+<div class="page-header">
+    	<h1>Contratistas</h1>
+		{# {% if is_granted("ROLE_ADMIN") %} #}<a href="{{ path('admin_security_user_new') }}" class="btn btn-primary btn-mini"><i class="icon-plus icon-white"></i> Nuevo</a>{# {%endif%} #}
+		<br clear="all" />
+	</div>
 
     <table class="records_list">
         <thead>
