--- a/src/IDPC/ContractualBundle/Resources/views/Contrato/show.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Contrato/show.html.twig
@@ -7,7 +7,7 @@
         <a href="{{ path('contrato_new') }}" class="btn btn-primary btn-mini"><i class="icon-plus icon-white"></i> Nuevo</a>{# {%endif%} #}
         <a href="{{ path('contrato') }}"class="btn btn-primary btn-mini"><i class="icon-plus icon-white"></i>Regresar</a>
         <a href="{{ path('contrato_edit', { 'id': entity.id }) }}"class="btn btn-primary btn-mini"><i class="icon-plus icon-white"></i>Editar</a>
-        <a href="{{ path('pago_new') }}"class="btn btn-primary btn-mini"><i class="icon-plus icon-white"></i>Pagos</a>
+        <a href="{{ path('pago') }}"class="btn btn-primary btn-mini"><i class="icon-plus icon-white"></i>Pagos</a>
                 <br clear="all" />
 	</div>
 
