--- a/src/IDPC/ContractualBundle/Resources/views/Pago/index.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Pago/index.html.twig
@@ -1,8 +1,13 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Pago list</h1>
-
+<div class="page-header">
+    	<h1>Pagos</h1>
+		{# {% if is_granted("ROLE_ADMIN") %} #}
+        <a href="{{ path('cumplimiento_new') }}" class="btn btn-primary btn-mini"><i class="icon-plus icon-white"></i>Certificado</a>{# {%endif%} #}
+        <a href="{{ path('informe_new') }}" class="btn btn-primary btn-mini"><i class="icon-plus icon-white"></i>Informe Actividades</a>{# {%endif%} #}
+                <br clear="all" />
+	</div>
     <table class="records_list">
         <thead>
             <tr>
