--- a/src/IDPC/BaseBundle/Resources/views/Area/index.html.twig
+++ b/src/IDPC/BaseBundle/Resources/views/Area/index.html.twig
@@ -31,7 +31,7 @@
         <ul>
         <li>
             <a href="{{ path('area_new') }}">
-                Create a new entry
+                Nuevo
             </a>
         </li>
     </ul>
