--- a/src/IDPC/SolicitudBundle/Resources/views/EstudioPrevio/index.html.twig
+++ b/src/IDPC/SolicitudBundle/Resources/views/EstudioPrevio/index.html.twig
@@ -1,16 +1,16 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>EstudioPrevio list</h1>
+    <h1>Estudios Previos</h1>
 
-    <table class="records_list">
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>Id</th>
                 <th>Objeto</th>
-                <th>Valorcontrato</th>
-                <th>Plazomeses</th>
-                <th>Plazodias</th>
+                <th>Valor Contrato</th>
+                <th>Plazo Meses</th>
+                <th>Plazo Dias</th>
                 <th>Created_at</th>
                 <th>Update_at</th>
                 <th>Actions</th>
