--- a/src/IDPC/BaseBundle/Resources/views/Cdp/index.html.twig
+++ b/src/IDPC/BaseBundle/Resources/views/Cdp/index.html.twig
@@ -1,20 +1,16 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Cdp list</h1>
+    <h1>CDPs</h1>
 
-    <table class="records_list">
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>Id</th>
                 <th>Numero</th>
                 <th>Objeto</th>
                 <th>Valor</th>
-                <th>Fecha</th>
-                <th>Oficio</th>
-                <th>Path</th>
-                <th>Created_at</th>
-                <th>Update_at</th>
+                <th>Fecha CDP</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -24,12 +20,9 @@
                 <td><a href="{{ path('cdp_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.numero }}</td>
                 <td>{{ entity.objeto }}</td>
-                <td>{{ entity.valor }}</td>
-                <td>{% if entity.fecha %}{{ entity.fecha|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{{ entity.oficio }}</td>
-                <td>{{ entity.path }}</td>
-                <td>{% if entity.createdat %}{{ entity.createdat|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{% if entity.updateat %}{{ entity.updateat|date('Y-m-d H:i:s') }}{% endif %}</td>
+                <td>{{ entity.valor |number_format(2, ',', '.') }}</td>
+                <td>{% if entity.fecha %}{{ entity.fecha|date('Y-m-d') }}{% endif %}</td>
+ 
                 <td>
                 <ul>
                     <li>
@@ -48,7 +41,7 @@
         <ul>
         <li>
             <a href="{{ path('cdp_new') }}">
-                Create a new entry
+                nuevo
             </a>
         </li>
     </ul>
