--- a/src/Security/SecurityBundle/Resources/views/UserDet/index.html.twig
+++ b/src/Security/SecurityBundle/Resources/views/UserDet/index.html.twig
@@ -1,17 +1,16 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>UserDet list</h1>
+    <h1>Usuarios</h1>
 
-    <table class="records_list">
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Primernombre</th>
-                <th>Segundonombre</th>
-                <th>Primerapellido</th>
-                <th>Segundoapellido</th>
-                <th>Created_at</th>
+                <th>Documento</th>
+                <th>Nombres</th>
+                <th>Apellidos</th>
+                <th>Area</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -19,20 +18,14 @@
         {% for entity in entities %}
             <tr>
                 <td><a href="{{ path('admin_security_userdet_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
+                <td>{{ entity.documento }}</td>
                 <td>{{ entity.primerNombre }}</td>
-                <td>{{ entity.segundoNombre }}</td>
                 <td>{{ entity.primerApellido }}</td>
-                <td>{{ entity.segundoApellido }}</td>
-                <td>{% if entity.createdat %}{{ entity.createdat|date('Y-m-d H:i:s') }}{% endif %}</td>
+                <td>{{ entity.area.nombre }}</td>
                 <td>
-                <ul>
-                    <li>
-                        <a href="{{ path('admin_security_userdet_show', { 'id': entity.id }) }}">show</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('admin_security_userdet_edit', { 'id': entity.id }) }}">edit</a>
-                    </li>
-                </ul>
+
+                    <a href="{{ path('admin_security_userdet_edit', { 'id': entity.id }) }}"><i class="icon-edit"></i></a>
+
                 </td>
             </tr>
         {% endfor %}
@@ -42,7 +35,7 @@
         <ul>
         <li>
             <a href="{{ path('admin_security_user_new') }}">
-                Create a new entry
+               Nuevo
             </a>
         </li>
     </ul>
