--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -101,7 +101,7 @@
 								<li class="divider"></li>
 
 								<li>
-									<a href="{ path('logout') }}">
+									<a href="{{ path('logout') }}">
 										<i class="icon-off"></i>
 										Salir
 									</a>
@@ -228,12 +228,6 @@
 								<a href="{{path('contrato')}}">
 									<i class="icon-double-angle-right"></i>
 									Contratos
-								</a>
-							</li>
-							<li>
-								<a href="{path('contratista')}}">
-									<i class="icon-double-angle-right"></i>
-									Contratista
 								</a>
 							</li>
 
