--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -230,6 +230,12 @@
 									Contratos
 								</a>
 							</li>
+							<li>
+								<a href="{{path('pago')}}">
+									<i class="icon-double-angle-right"></i>
+									Pagos
+								</a>
+							</li>
 
 						</ul>
 					</li>
