--- a/src/IDPC/ContractualBundle/Resources/views/Contrato/index.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Contrato/index.html.twig
@@ -2,22 +2,23 @@
 
 {% block body -%}
 <div class="page-header">
-    	<h1>Contratos</h1>
+    <h1>Contratos</h1>
 		{# {% if is_granted("ROLE_ADMIN") %} #}<a href="{{ path('contrato_new') }}" class="btn btn-primary btn-mini"><i class="icon-plus icon-white"></i> Nuevo</a>{# {%endif%} #}
-		<br clear="all" />
-	</div>
+    <br clear="all" />
+</div>
 
-    <table class="records_list">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Numero</th>
-                <th>Contratista</th>
-                <th>Fechainicio</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
+<table class="records_list">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Numero</th>
+            <th>Contratista</th>
+            <th>Fechainicio</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+            {% if (is_expr_granted("hasRole('ROLE_ADMIN')")) -%}
         {% for entity in entities %}
             <tr>
                 <td><a href="{{ path('contrato_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
@@ -25,18 +26,20 @@
                 <td>{{ entity.estudio.contratista.primerApellido }}{{ entity.estudio.contratista.segundoApellido }}, {{ entity.estudio.contratista.primerNombre }}{{ entity.estudio.contratista.segundoNombre }}</td>
                 <td>{% if entity.fechaInicio %}{{ entity.fechaInicio|date('Y-m-d') }}{% endif %}</td>
                 <td>
-                <ul>
-                    <li>
-                        <a href="{{ path('contrato_show', { 'id': entity.id }) }}">show</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('contrato_edit', { 'id': entity.id }) }}">edit</a>
-                    </li>
-                </ul>
+                    <ul>
+                        <li>
+                            <a href="{{ path('contrato_show', { 'id': entity.id }) }}">show</a>
+                        </li>
+                        <li>
+                            <a href="{{ path('contrato_edit', { 'id': entity.id }) }}">edit</a>
+                        </li>
+                    </ul>
                 </td>
             </tr>
         {% endfor %}
-        </tbody>
-    </table>
+            {% endif %}
+
+    </tbody>
+</table>
 
     {% endblock %}
