--- a/src/IDPC/ContractualBundle/Resources/views/Pago/index.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Pago/index.html.twig
@@ -6,16 +6,20 @@
 		{# {% if is_granted("ROLE_ADMIN") %} #}
         <a href="{{ path('cumplimiento_new') }}" class="btn btn-primary btn-mini"><i class="icon-plus icon-white"></i>Certificado</a>{# {%endif%} #}
         <a href="{{ path('informe_new') }}" class="btn btn-primary btn-mini"><i class="icon-plus icon-white"></i>Informe Actividades</a>{# {%endif%} #}
-                <br clear="all" />
+             
 	</div>
-    <table class="records_list">
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Mes</th>
-                <th>Valor</th>
-                <th>Numeropago</th>
                 <th>Estado</th>
+                <th>Identificación</th>
+                <th>Nombres</th>
+                <th>Apellidos</th>
+                <th>Perido</th>
+                <th>No Contrato</th>
+                <th>Valor a Pagar</th>
+                <th>Numero Pago</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -23,19 +27,19 @@
         {% for entity in entities %}
             <tr>
                 <td><a href="{{ path('pago_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{{ entity.mes }}</td>
-                <td>{{ entity.valor }}</td>
-                <td>{{ entity.numeroPago }}</td>
                 <td>{{ entity.estado }}</td>
+                <td>{{ entity.contrato.estudio.contratista.documento }}</td>
+                <td>{{ entity.contrato.estudio.contratista.primerNombre }}</td>
+                <td>{{ entity.contrato.estudio.contratista.primerApellido }}</td>
+                <td>{{ entity.mes }}</td>
+                <td>{{ entity.contrato.id }}</td>
+                <td>{{ entity.valor |number_format(0, ',', '.')  }}</td>
+                <td>{{ entity.numeroPago }}</td>
+
                 <td>
-                <ul>
-                    <li>
-                        <a href="{{ path('pago_show', { 'id': entity.id }) }}">show</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('pago_edit', { 'id': entity.id }) }}">edit</a>
-                    </li>
-                </ul>
+
+                        <a href="{{ path('pago_edit', { 'id': entity.id }) }}"><i class="icon-edit"></i></a>
+
                 </td>
             </tr>
         {% endfor %}
