Revert 952ff72..bfcde59
This rolls back to commit 952ff7297790c90e6ce92bc237e6dfde93d39405.

--- a/src/IDPC/ContractualBundle/Resources/views/Pago/index.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Pago/index.html.twig
@@ -2,81 +2,47 @@
 
 {% block body -%}
 <div class="page-header">
-    <h1>Pagos</h1>
+    	<h1>Pagos</h1>
 		{# {% if is_granted("ROLE_ADMIN") %} #}
-<<<<<<< HEAD
         <a href="{{ path('cumplimiento_new') }}" class="btn btn-primary btn-mini"><i class="icon-plus icon-white"></i>Certificado</a>{# {%endif%} #}
         <a href="{{ path('informe_new') }}" class="btn btn-primary btn-mini"><i class="icon-plus icon-white"></i>Informe Actividades</a>{# {%endif%} #}
-             
+                <br clear="all" />
 	</div>
-    <table class="table table-striped">
+    <table class="records_list">
         <thead>
             <tr>
                 <th>Id</th>
+                <th>Mes</th>
+                <th>Valor</th>
+                <th>Numeropago</th>
                 <th>Estado</th>
-                <th>Identificación</th>
-                <th>Nombres</th>
-                <th>Apellidos</th>
-                <th>Perido</th>
-                <th>No Contrato</th>
-                <th>Valor a Pagar</th>
-                <th>Numero Pago</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
-=======
-    <a href="{{ path('cumplimiento_new') }}" class="btn btn-primary btn-mini"><i class="icon-plus icon-white"></i>Certificado</a>{# {%endif%} #}
-    <a href="{{ path('informe_new') }}" class="btn btn-primary btn-mini"><i class="icon-plus icon-white"></i>Informe Actividades</a>{# {%endif%} #}
-    <br clear="all" />
-</div>
-<table class="records_list">
-    <thead>
-        <tr>
-            <th>Id</th>
-            <th>Mes</th>
-            <th>Valor</th>
-            <th>Numeropago</th>
-            <th>Estado</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
->>>>>>> 952ff7297790c90e6ce92bc237e6dfde93d39405
         {% for entity in entities %}
             <tr>
                 <td><a href="{{ path('pago_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{{ entity.estado }}</td>
-                <td>{{ entity.contrato.estudio.contratista.documento }}</td>
-                <td>{{ entity.contrato.estudio.contratista.primerNombre }}</td>
-                <td>{{ entity.contrato.estudio.contratista.primerApellido }}</td>
                 <td>{{ entity.mes }}</td>
-                <td>{{ entity.contrato.id }}</td>
-                <td>{{ entity.valor |number_format(0, ',', '.')  }}</td>
+                <td>{{ entity.valor }}</td>
                 <td>{{ entity.numeroPago }}</td>
-
+                <td>{{ entity.estado }}</td>
                 <td>
-<<<<<<< HEAD
-
-                        <a href="{{ path('pago_edit', { 'id': entity.id }) }}"><i class="icon-edit"></i></a>
-
-=======
-                    <ul>
-                        <li>
-                            <a href="{{ path('pago_show', { 'id': entity.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('pago_edit', { 'id': entity.id }) }}">edit</a>
-                        </li>
-                    </ul>
->>>>>>> 952ff7297790c90e6ce92bc237e6dfde93d39405
+                <ul>
+                    <li>
+                        <a href="{{ path('pago_show', { 'id': entity.id }) }}">show</a>
+                    </li>
+                    <li>
+                        <a href="{{ path('pago_edit', { 'id': entity.id }) }}">edit</a>
+                    </li>
+                </ul>
                 </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <ul>
+        <ul>
         <li>
             <a href="{{ path('pago_new') }}">
                 Create a new entry
