--- a/src/IDPC/SolicitudBundle/Resources/views/EstudioPrevio/index.html.twig
+++ b/src/IDPC/SolicitudBundle/Resources/views/EstudioPrevio/index.html.twig
@@ -23,7 +23,7 @@
                 <td><a href="{{ path('estudiosprevios_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.contratista.primerApellido }}</td>
                 <td>{{ entity.objeto }}</td>
-                <td>{{ entity.valorContrato|number_format(0, ',', '.')  }}</td>
+                <td>{{ entity.valorContrato }}</td>
                 <td>{{ entity.plazoMeses }}</td>
                 <td>{{ entity.plazoDias }}</td>
                 <td>{% if entity.createdat %}{{ entity.createdat|date('Y-m-d H:i:s') }}{% endif %}</td>
