--- a/src/IDPC/ContractualBundle/Resources/views/Aportes/index.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Aportes/index.html.twig
@@ -28,7 +28,7 @@
                 <td>{{ entity.path }}</td>
                 <td>
                 <ul>
-                <a href="{{ path('aportes_edit', { 'id': entity.id }) }}"><i class="icon-edit"></i></a>
+                <a href="{{ path('aportes_salud', { 'id': entity.id }) }}"><i class="icon-edit"></i></a>
                 </ul>
                 </td>
             </tr>
